// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BirthPlace /> render() should render correctly 1`] = `
<div>
  <WithStyles(EditableTextForm)
    label="Place of Birth"
    name="birthPlace"
    onSubmit={[Function]}
    placeholder="Click to specify place of birth"
    value=""
  />
</div>
`;

exports[`<BirthPlace /> render() should render correctly if variant is text field 1`] = `
<div>
  <FormsyInterceptor
    label="Place of Birth"
    name="birthPlace"
    onInterceptValue={[Function]}
    resaga={
      Object {
        "dispatchTo": [MockFunction],
        "setValue": [MockFunction],
      }
    }
    value=""
  />
</div>
`;

exports[`<BirthPlace /> render() should render correctly if variant is text field 2`] = `
<div>
  <FormsyInterceptor
    label="Place of Birth"
    name="birthPlace"
    onInterceptValue={[Function]}
    resaga={
      Object {
        "dispatchTo": [MockFunction],
        "setValue": [MockFunction],
      }
    }
    value="Manila"
  />
</div>
`;

exports[`<BirthPlace /> render() should render correctly if variant is text only 1`] = `
<div>
  <span />
</div>
`;
